comment box overflow fixed on mobile screens

--- a/static/css/post.css
+++ b/static/css/post.css
@@ -111,6 +111,10 @@ small {
     max-width: 100% !important;
   }
 
+  .commentForm textarea {
+    width: 100%;
+  }
+
   .navbar * {
     width: 100%;
   }
